# mp3_generator

./: .gitignore  README.md  pyproject.toml
examples/: README.md  build-all-examples.ps1  build-all-examples.sh  build-examples.ps1  build-examples.sh
examples/01_Geburtstag/: 01_Geburtstag.md
examples/05_Touristeninformation/: 05_Touristeninformation.md
src/telc_audio/: __init__.py  cli.py  generator.py  model.py  parser.py
tests/: test_generator.py  test_parser.py  verify_outputs.py
